--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "file-collection",
+  "name": "vue-file-collection",
+  "description": "Vue-3 file collection component, capable of uploading directly to s3",
   "version": "1.0.0",
-  "description": "Vue3 file collection component, capable of uploading directly to s3",
-  "main": "index.js",
+  "author": "",
+  "license": "MIT",
+  "module": "dist/file-collection.esm.js",
   "scripts": {
     "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "serve": "webpack serve",
+    "roll": "rollup --config rollup.config.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.5.3",
     "dropzone": "^5.7.2",
@@ -20,11 +21,15 @@
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
+    "@rollup/plugin-commonjs": "^17.0.0",
     "@vue/compiler-sfc": "^3.0.4",
     "axios": "^0.21.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "jquery": "^3.5.1",
+    "rollup": "^2.35.1",
+    "rollup-plugin-css-only": "^3.0.0",
+    "rollup-plugin-vue": "^6.0.0-beta.10",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "vue-loader": "^16.1.1",
