--- a/package.json
+++ b/package.json
@@ -11,23 +11,22 @@
     "watch:test": "webpack --watch --config test/webpack.config.js",
     "roll": "rollup --config rollup.config.js"
   },
+  "peerDependencies": {
+    "vue": "^3.0.4"
+  },
   "dependencies": {
+    "guid-ts": "^1.1.0",
+    "axios": "^0.21.0",
+    "jquery": "^3.5.1"
   },
   "devDependencies": {
-    "bootstrap": "^4.5.3",
-    "dropzone": "^5.7.2",
-    "guid-ts": "^1.1.0",
-    "popper.js": "^1.16.1",
-    "vue": "^3.0.4",
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@vue/compiler-sfc": "^3.0.4",
-    "axios": "^0.21.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
-    "jquery": "^3.5.1",
     "rollup": "^2.35.1",
     "rollup-plugin-css-only": "^3.0.0",
     "rollup-plugin-vue": "^6.0.0-beta.10",
