--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "css-loader": "^5.0.1",
     "rollup": "^2.35.1",
     "rollup-plugin-css-only": "^3.0.0",
+    "rollup-plugin-scss": "^2.6.1",
     "rollup-plugin-vue": "^6.0.0-beta.10",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
