--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "dependencies": {
     "guid-ts": "^1.1.0",
-    "axios": "^0.21.0",
-    "jquery": "^3.5.1"
+    "axios": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
