--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@vue/compiler-sfc": "^3.0.4",
     "babel-loader": "^8.2.2",
+    "bootstrap": "^4.5.3",
     "css-loader": "^5.0.1",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "rollup": "^2.35.1",
     "rollup-plugin-css-only": "^3.0.0",
     "rollup-plugin-scss": "^2.6.1",
