--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "rollup": "^2.35.1",
     "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-css-only": "^3.0.0",
-    "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-scss": "^2.6.1",
+    "rollup-plugin-styles": "^3.12.2",
     "rollup-plugin-vue": "^6.0.0-beta.10",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "vue": "^3.0.4",
-    "vue-loader": "^16.1.1",
+    "vue-loader": "^16.1.2",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
